# rs-evalbot

./: .gitignore  LICENSE  README.md  bpfgen.c  evalbot.toml.in  init.sh  pyeval.py  rustfmt.toml
cseval/: cseval.cs  cseval.sln
evalbot/: Cargo.toml  README.md  evalbot.irc.toml.in  evalbot.toml.in  init.sh  mono_syscalls  python_syscalls  rustfmt.toml
evalbot/src/: cfg.rs  eval.rs  main.rs  playpen.rs  util.rs
evalbot/src/eval/: compiler.rs  csharp.rs  mod.rs  persistent.rs
evalbotlib/: Cargo.toml
evalbotlib/src/: eval.rs  lib.rs  playpen.rs  util.rs
evalbotlib/src/eval/: compiler.rs  exec.rs  mod.rs  persistent.rs  remote.rs
evaluators/: elixir_eval.exs  exeval.exs  jseval.js  launcher.c  pyeval.py  test.py
evaluators/cseval/: Program.cs  cseval.cs  cseval.csproj  cseval.sln
evaluators/cseval/Properties/: AssemblyInfo.cs
evaluators/fseval/: .gitignore  App.config  FSharp.Core.optdata  FSharp.Core.sigdata  Program.cs  fseval.csproj  fseval.sln  packages.config
evaluators/fseval/Properties/: AssemblyInfo.cs
evaluators/javaeval/: build.gradle  settings.gradle
evaluators/javaeval/src/main/java/io/github/angelsl/javaeval/: JavaEval.java
evaluators/javaeval/src/main/java/jnr/unixsocket/: UnixSocketUtil.java
evaluators/scalaeval/: .gitignore  build.sbt
run/: bf_syscalls  cseval.service  cseval.socket  dotnet_syscalls  elixir_syscalls  evalbot.irc.toml.in  evalbot.service  evalbot.tg.toml.in  evalbot.toml.in  exeval.service  exeval.socket  fseval.service  init.sh  java_syscalls  javaeval.service  javaeval.socket  jseval.service  jseval.socket  merged_syscalls  mono_syscalls  mono_syscalls.bpf  node_syscalls  node_syscalls.bpf  pyeval.service  pyeval.socket  python_syscalls  python_syscalls.bpf  run_bwrap.sh  run_playpen  run_playpen_fd  run_playpen_java  rust_syscalls  rust_syscalls.bpf  scala_syscalls  scala_syscalls.bpf  tgbot.service
src/: eval.rs  main.rs  playpen.rs
tgbot/: Cargo.toml  build.rs
tgbot/src/: main.rs  tgapi.rs
(+1 files in other folders)
