[package]
name = "evalbotlib"
version = "0.4.0"
authors = ["angelsl <angelsl@in04.sg>"]
edition = "2018"

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1"
bytes = "1"
tokio = { version = "1", features = ["io-util", "fs", "process", "net", "time"] }
futures = "0.3"
log = "0.4"
