[package]
name = "tgbot"
version = "0.1.0"
authors = ["angelsl <hidingfromhidden@gmail.com>"]

[features]
unixsocket = ["evalbotlib/unixsocket"]
debugprint = []

[dependencies]
evalbotlib = { path = "../evalbotlib" }
hyper = ">= 0.0.0"
hyper-tls = ">= 0.0.0"
serde = ">= 0.0.0"
serde_json = ">= 0.0.0"
serde_derive = ">= 0.0.0"
toml = ">= 0.0.0"
futures = ">= 0.0.0"
