[package]
name = "tgbot"
version = "0.1.0"
authors = ["angelsl <angelsl@in04.sg>"]

[features]
unixsocket = ["evalbotlib/unixsocket"]

[dependencies]
evalbotlib = { path = "../evalbotlib" }
telebot = { git = "https://github.com/angelsl/telebot.git", branch = "wip" }
serde = "1"
serde_derive = "1"
toml = "0.4"
futures = "0.1"
tokio = "0.1"
log = "0.4"
env_logger = "0.6"
