[package]
name = "tgbot"
version = "0.2.0"
authors = ["angelsl <angelsl@in04.sg>"]
edition = "2018"

[dependencies]
evalbotlib = { path = "../evalbotlib" }
telegram-bot = { git = "https://github.com/angelsl/telegram-bot.git", branch = "master" }
serde = "1"
serde_derive = "1"
toml = "0.5"
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "sync"] }
tracing-log = "0.1"
tracing-subscriber = "0.2"
log = "0.4"
